ProdIND/ProdPrograms/force-app/main/default/objects/Asset/fields/Dealer_Sub_dealer_name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Sub_dealer_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer/Sub-dealer name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Dealer/Sub-dealer name)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>