ProdIND/ProdPrograms/force-app/main/default/objects/Asset/fields/Manufacturer_Year__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Year__c</fullName>
    <label>Manufacturer  Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>