ProdIND/ProdPrograms/force-app/main/default/objects/Asset/fields/Vehicle_sub_category__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_sub_category__c</fullName>
    <label>Vehicle Sub category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RLN</fullName>
            </value>
            <value>
                <fullName>RLY</fullName>
            </value>
            <value>
                <fullName>UEB</fullName>
            </value>
            <value>
                <fullName>UIM</fullName>
            </value>
            <value>
                <fullName>UOB</fullName>
            </value>
            <value>
                <fullName>UOM</fullName>
            </value>
            <value>
                <fullName>UPB</fullName>
            </value>
            <value>
                <fullName>UPD</fullName>
            </value>
            <value>
                <fullName>UPO</fullName>
            </value>
            <value>
                <fullName>URS</fullName>
            </value>
            <value>
                <fullName>URV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>